--- a/index.html
+++ b/index.html
@@ -110,7 +110,17 @@
 
       </section>
     </header>
-    More Designed for the future Introducing an extensible editor
+
+    <!-- design section -->
+     <section class="py-[4rem]">
+        <h2 class="text-Blue900 text-center text-4xl font-bold font-Overpass">Designed for the future</h2>
+
+        <div class="my-12 mx-auto w-fit">
+          <img src="./images/illustration-editor-desktop.svg" alt="" class="hidden">
+          <img src="./images/illustration-editor-mobile.svg" alt="">
+        </div>
+     </section>
+     Introducing an extensible editor
     Blogr features an exceedingly intuitive interface which lets you focus on
     one thing: creating content. The editor supports management of multiple
     blogs and allows easy manipulation of embeds such as images, videos, and
